correction so that it compiles with java 17